# trigerror

./: .gitignore  Cargo.toml  README.md  REQUIREMENTS.md  justfile  trigerror.ini  trigerror_wlan0_2026-03-26_15:18:33.errors.txt  ~trigerror.ini
docs/: AS2020-0007-MessageFormats.xlsx
example_scenarios/: 20260303-192220_test_2000_1_A_enp3s0f1.pcap  20260303-192705_test_2000_1_B_enp3s0f1.pcap
src/: cli.rs  config.rs  constants.rs  eth_frame.rs  gptp.rs  lib.rs  mac.rs  main.rs  octet.rs  owned_packet.rs  packet.rs  protocol.rs  protocols.rs  recording.rs  ring_buffer.rs  time_result.rs  trigerror.rs  utils.rs  writer.rs  ~ring_buffer.rs
src/protocols/: gptp.rs
src/protocols/gptp/: announce_state_machine.rs  flags.rs  header.rs  md_sync_receive_sm.rs  message.rs  message_type.rs  message_types.rs  state_machines.rs  sync_state_machine.rs
src/protocols/gptp/message_types/: announce.rs  follow_up.rs  peer_delay_request.rs  peer_delay_response.rs  peer_delay_response_follow_up.rs  signaling.rs  sync1step.rs  sync2step.rs
src/protocols/gptp/state_machines/: announce.rs  mac_validator.rs  peer_delay.rs  signaling.rs  sync.rs  time_validator.rs
