[package]
name = "trigerror"
version = "0.1.0"
edition = "2024"
license = "GPL-3"
readme = "README.md"
repository = "https://github.com/an-Iceberg"
keywords = ["packets", "networking", "error"]

[dependencies]
clap = "4.5.53"
colored = "3.0.0"
hashbrown = "0.16.1"
indicatif = "0.18.3"
ini = "1.3.0"
itertools = "0.14.0"
pcap = "2.3.0"
ratatui = "0.29.0"
stringmetrics = "2.2.2"
