[package]
name = "trigerror"
version = "0.1.0"
edition = "2024"
license = "GPL-3"
readme = "README.md"
repository = "https://github.com/an-Iceberg"
keywords = ["packet", "packets", "networking", "error", "ptp", "gptp"]
description = "Utility for recording network traffic upon encountering an error in a packet."

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
# hashbrown = "0.16.1"
# indicatif = "0.18.4"
ini = "1.3.0"
# itertools = "0.14.0"
libc = "0.2.184"
pcap = "2.4.0"
pcap-file = "2.0.0"
# ratatui = "0.30.0"
stringmetrics = "2.2.2"
